
icon:plus[] API: Make OAuth2 Server options overrideable via environment variables.

icon:check[] REST: A concurrency issue has been fixed which could lead to problems when creating multiple schemas in-parallel.

icon:check[] REST: Fix error message when no Node for a GraphFieldContainer can be found. link:https://github.com/gentics/mesh/issues/364[#364]

[[v0.27.2]]
== 0.27.2 (07.11.2018)

icon:check[] REST: The CPU utilization for download requests has been reduced. link:https://github.com/gentics/mesh/issues/530[#530]

icon:plus[] Core: The Gentics Mesh server will now use native bindings to increase HTTP performance on Linux x86_64 platforms.

icon:check[] REST: Branch create requests will now correctly set the path prefix property. The value of the property was previously not used.

icon:check[] REST: Added more detailed error information when accessing a resource without permission. link:https://github.com/gentics/mesh/issues/314[#314]

[[v0.27.1]]
== 0.27.1 (31.10.2018)

icon:plus[] REST: It is now possible to specify a path prefix for branches. When specified, all resolved paths will include the prefix. The webroot endpoint will also utilize the prefix to resolve nodes. The prefix can be set for new projects or for update requests on existing branches.

icon:check[] Java REST Client: Fixed wrong log output information.

icon:check[] REST: Fixed error while fetching jobs for deleted projects.

icon:plus[] Elasticsearch: The index sync will now automatically remove no longer used indices.

icon:check[] REST: Fixed an error that can happen when creating new nodes which contain binary fields that reference a not yet stored binary sha512sum. link:https://github.com/gentics/mesh/issues/524[#524]

[[v0.27.0]]
== 0.27.0 (19.10.2018)
